--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
  /* Start of responsive images CSS */
-
+/*
 img {
     --f: .1; /* the parallax factor (the smaller the better) */
-    --r: 10px; /* radius */
+    /* --r: 10px; /* radius */ /*
     
     --_f: calc(100%*var(--f)/(1 + var(--f)));
     --_a: calc(90deg*var(--f));
-    width: 250px; /* the image size */
+    width: 250px; /* the image size */ /*
     aspect-ratio: calc(1 + var(--f));
     object-fit: cover;
     clip-path: inset(0 var(--_f) 0 0 round var(--r));
@@ -28,5 +28,49 @@ img {
     gap: 30px;
     background: #C44D58;
   }
-
+*/
   /* END of responsive images CSS */
+
+  body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
+body, html {
+  height: 100%;
+  color: #777;
+  line-height: 1.8;
+}
+
+/* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* First image (Logo. Full height) */
+.bgimg-1 {
+  background-image: url("https://www.w3schools.com/w3images/parallax1.jpg");
+  min-height: 100%;
+}
+
+/* Second image (Portfolio) */
+.bgimg-2 {
+  background-image: url("https://www.w3schools.com/w3images/parallax2.jpg");
+  min-height: 400px;
+}
+
+/* Third image (Contact) */
+.bgimg-3 {
+  background-image: url("https://www.w3schools.com/w3images/parallax3.jpg");
+  min-height: 400px;
+}
+
+.w3-wide {letter-spacing: 10px;}
+.w3-hover-opacity {cursor: pointer;}
+
+/* Turn off parallax scrolling for tablets and phones */
+@media only screen and (max-device-width: 1600px) {
+  .bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: scroll;
+    min-height: 400px;
+  }
+}
