--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url("https://www.w3schools.com/w3images/parallax1.jpg");
+  background-image: url("images/pexels-lumn-167699.jpg");
   min-height: 100%;
 }
 
