--- a/styles.css
+++ b/styles.css
@@ -49,20 +49,26 @@ body, html {
 /* First image (Logo. Full height) */
 .bgimg-1 {
   background-image: url("images/magicpattern-ixxjruC7Gg4-unsplash.jpg");
-    /* background-image: url("https://www.w3schools.com/w3images/parallax2.jpg"); */
-
+  /* background-image: url("images/shubham-dhage-MIvbZPmY9Ds-unsplash.jpg"); */
+  /* background-image: url("https://www.w3schools.com/w3images/parallax2.jpg"); */
+  
   min-height: 100%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("https://www.w3schools.com/w3images/parallax2.jpg");
+  /* background-image: url("https://www.w3schools.com/w3images/parallax2.jpg"); */
+  /* background-image: url("images/lea-l-4N6qT784t3A-unsplash.jpg"); */
+  background-image: url("images/shubham-dhage-5LQ_h5cXB6U-unsplash.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("images/pexels-lumn-167699.jpg");
+  /* background-image: url("images/pexels-lumn-167699.jpg"); */
+  /* background-image: url("images/shubham-dhage-oDFzTI3q87o-unsplash.jpg"); */
+  background-image: url("images/shubham-dhage-MIvbZPmY9Ds-unsplash.jpg");
+
   min-height: 400px;
 }
 
