--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,44 @@
  /* Start of responsive images CSS */
-/*
-img {
-    --f: .1; /* the parallax factor (the smaller the better) */
-    /* --r: 10px; /* radius */ /*
-    
-    --_f: calc(100%*var(--f)/(1 + var(--f)));
-    --_a: calc(90deg*var(--f));
-    width: 250px; /* the image size */ /*
-    aspect-ratio: calc(1 + var(--f));
-    object-fit: cover;
-    clip-path: inset(0 var(--_f) 0 0 round var(--r));
-    transform: perspective(400px) var(--_t,rotateY(var(--_a)));
-    transition: .5s;
-    cursor: pointer;
-  }
-  img:hover {
-    clip-path: inset(0 0 0 var(--_f) round var(--r));
-    --_t:translateX(calc(-1*var(--_f))) rotateY(calc(-1*var(--_a)))
-  }
+
+ img {
+  --f: .1; /* the parallax factor (the smaller the better) */
+  --r: 10px; /* radius */
   
-  body {
-    margin: 0;
-    min-height: 100vh;
-    display: grid;
-    place-content: center;
-    grid-auto-flow: column;
-    gap: 30px;
-    background: #C44D58;
-  }
-*/
+  --_f: calc(100%*var(--f)/(1 + var(--f)));
+  --_a: calc(90deg*var(--f));
+  width: 250px; /* the image size */
+  aspect-ratio: calc(1 + var(--f));
+  object-fit: cover;
+  clip-path: inset(0 var(--_f) 0 0 round var(--r));
+  transform: perspective(400px) var(--_t,rotateY(var(--_a)));
+  transition: .5s;
+  cursor: pointer;
+}
+img:hover {
+  clip-path: inset(0 0 0 var(--_f) round var(--r));
+  --_t:translateX(calc(-1*var(--_f))) rotateY(calc(-1*var(--_a)))
+}
+
+.animImgDiv {
+  margin: 0;
+  /* min-height: 100vh; */
+  display: grid;
+  place-content: center;
+  grid-auto-flow: column;
+  gap: 30px;
+  /* background: #C44D58; */
+}
+/*
+body {
+  margin: 0;
+  min-height: 100vh;
+  display: grid;
+  place-content: center;
+  grid-auto-flow: column;
+  gap: 30px;
+  background: #C44D58;
+}
+
   /* END of responsive images CSS */
 
   body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
@@ -48,7 +58,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url("images/magicpattern-ixxjruC7Gg4-unsplash.jpg");
+    /* background-image: url("images/magicpattern-ixxjruC7Gg4-unsplash.jpg"); */
     background-image: url("images/VR_Comp.jpg");
   /* background-image: url("images/shubham-dhage-MIvbZPmY9Ds-unsplash.jpg"); */
   /* background-image: url("https://www.w3schools.com/w3images/parallax2.jpg"); */
