last change for today

--- a/styles.css
+++ b/styles.css
@@ -58,20 +58,20 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url("images/magicpattern-ixxjruC7Gg4-unsplash.jpg");
-    /* background-image: url("images/VR_Comp.jpg"); */
+  /*   background-image: url("images/magicpattern-ixxjruC7Gg4-unsplash.jpg");*/
+    background-image: url("images/VR_CompBars.jpg"); 
   /* background-image: url("images/shubham-dhage-MIvbZPmY9Ds-unsplash.jpg"); */
 
   
-  min-height: 100%;
+  min-height: 50%;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
   /* background-image: url("https://www.w3schools.com/w3images/parallax2.jpg"); */
   /* background-image: url("images/lea-l-4N6qT784t3A-unsplash.jpg"); */
-  background-image: url("images/fishTank1.png"); 
-  /*background-image: url("images/shubham-dhage-5LQ_h5cXB6U-unsplash.jpg");*/
+  /* background-image: url("images/fishTank1.png"); */
+  background-image: url("images/magicpattern-jbywvpa9vH8-unsplash.jpg");
   min-height: 400px;
 }
 
@@ -79,8 +79,8 @@ body, html {
 .bgimg-3 {
   /* background-image: url("images/pexels-lumn-167699.jpg"); */
   /* background-image: url("images/shubham-dhage-oDFzTI3q87o-unsplash.jpg"); */
-  /* background-image: url("images/shubham-dhage-MIvbZPmY9Ds-unsplash.jpg");*/
-  background-image: url("images/VR_Driving.png");
+  background-image: url("images/magicpattern-KfFmwa7m5VQ-unsplash.jpg");
+  /* background-image: url("images/VR_Driving.png"); */
   min-height: 400px;
 }
 
@@ -88,8 +88,8 @@ body, html {
 .bgimg-4 {
   /* background-image: url("images/pexels-lumn-167699.jpg"); */
   /* background-image: url("images/shubham-dhage-oDFzTI3q87o-unsplash.jpg"); */
-  /* background-image: url("images/shubham-dhage-MIvbZPmY9Ds-unsplash.jpg");*/
-  background-image: url("images/xrTerra2.png");
+  background-image: url("images/magicpattern-am-yg8wLLIo-unsplash.jpg");
+  /* background-image: url("images/xrTerra2.png");*/
   min-height: 400px;
 }
 
