--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,18 @@
- /* Start of responsive images CSS */
+.flex-container {
+  display: flex;
+  /* background-color: DodgerBlue; */
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.flex-container > div {
+  /* background-color: #f1f1f1; */
+  /* margin: 10px; */
+  padding: 15px;
+  /* font-size: 30px; */
+}
+
+/* Start of responsive images CSS */
 
  .imgAnim {
   --f: .1; /* the parallax factor (the smaller the better) */
