--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
 
 .flex-container > div {
   /* background-color: #f1f1f1; */
-  /* margin: 10px; */
-  padding: 15px;
+  margin: 15px;
+  /* padding: 15px; */
   /* font-size: 30px; */
 }
 
