--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* flex box */
 .flex-container {
   display: flex;
   /* background-color: DodgerBlue; */
@@ -10,6 +11,28 @@
   margin: 15px;
   /* padding: 15px; */
   /* font-size: 30px; */
+}
+
+/* min and max screen width*/
+
+h1 {
+  /* Extra small devices (phones, less than 768px) */
+  font-size: 4px !important ;
+
+  /* Small devices (tablets, 768px and up) */
+  @media (min-width: 768px) {
+    font-size: 12px !important ;
+  }
+
+  /* Medium devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    font-size: 33px !important ;
+  }
+
+  /* Large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) {
+    font-size: 136px !important ;
+  }
 }
 
 /* Start of responsive images CSS */
