--- a/styles.css
+++ b/styles.css
@@ -15,25 +15,25 @@
 
 /* min and max screen width*/
 
-h1 {
+/* h1 { */
   /* Extra small devices (phones, less than 768px) */
-  font-size: 4px !important ;
+  /* font-size: 4px !important ; */
 
   /* Small devices (tablets, 768px and up) */
-  @media (min-width: 768px) {
-    font-size: 12px !important ;
-  }
+  /* @media (min-width: 768px) { */
+    /* font-size: 12px !important ; */
+  /* } */
 
   /* Medium devices (desktops, 992px and up) */
-  @media (min-width: 992px) {
-    font-size: 33px !important ;
-  }
+  /* @media (min-width: 992px) { */
+    /* font-size: 33px !important ; */
+  /* } */
 
   /* Large devices (large desktops, 1200px and up) */
-  @media (min-width: 1200px) {
-    font-size: 136px !important ;
-  }
-}
+  /* @media (min-width: 1200px) { */
+    /* font-size: 136px !important ; */
+  /* } */
+/* } */
 
 /* Start of responsive images CSS */
 
@@ -172,7 +172,7 @@ legend{color:inherit;display:table;max-width:100%;padding:0;white-space:normal}t
 ::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}
 /* End extract */
 html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5}html{overflow-x:hidden}
-h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px}
+h1{font-size:36px}h2{font-size:30px}h3{font-size:24px}h4{font-size:20px}h5{font-size:18px}h6{font-size:16px} 
 .w3-serif{font-family:serif}.w3-sans-serif{font-family:sans-serif}.w3-cursive{font-family:cursive}.w3-monospace{font-family:monospace}
 h1,h2,h3,h4,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0}.w3-wide{letter-spacing:4px}
 hr{border:0;border-top:1px solid #eee;margin:20px 0}
