--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,10 @@ body {
 
   /* END of responsive images CSS */
 
+  .dividerColGrey {
+    background-color: #f8f8f8;
+  }
+
   body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
   height: 100%;
