--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,11 @@ body {
     background-color: #f8f8f8;
   }
 
+  .NaVFontCol {
+    color: #005BFF !important;
+  }
+
+
   body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
   height: 100%;
