--- a/styles.css
+++ b/styles.css
@@ -232,7 +232,7 @@ body, html {
 /* Home Page Imnage For Medium Screens) */
 .bgimg-1 {
   background-image: url("images/VR_CompBars.jpg");
-  min-height: 50%;
+  min-height: 400px;
 }
 
 
