--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,7 @@ body, html {
 }
 
 /* Create a Parallax Effect */
-.bgimg-1, .bgimg-2, .bgimg-3, .bgimg-4 {
+.bgimg-1 {
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -232,7 +232,7 @@ body, html {
 /* Home Page Imnage For Medium Screens) */
 .bgimg-1 {
   background-image: url("images/VR_CompBars.jpg");
-  min-height: 400px;
+  min-height: 100%;
 }
 
 
@@ -243,6 +243,11 @@ body, html {
     min-height: 100%;
   }
 } */
+
+/* Home Page Imnage For Medium Screens) */
+.quoteBox {
+  min-height: 100%;
+}
 
 
 .w3-wide {letter-spacing: 10px;}
