--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,7 @@ body, html {
 @media only screen and (max-device-width: 1600px) {
   .bgimg-1, .bgimg-2, .bgimg-3 {
     background-attachment: fixed;
-    min-height: 400px;
+    min-height: 50%;
   }
 }
 
