--- a/styles.css
+++ b/styles.css
@@ -232,17 +232,18 @@ body, html {
 /* Home Page Imnage For Medium Screens) */
 .bgimg-1 {
   background-image: url("images/VR_CompBars.jpg");
-  min-height: 100%;
+  min-height: 50%;
 }
 
 
 /* Home Page Imnage For Mobile Screens) */
-/* @media only screen and (max-width: 600px) {
+@media only screen and (max-width: 600px) {
   .bgimg-1 {
     background-image: url("images/VR_CompBars_SML.jpg");
-    min-height: 100%;
+    background-attachment: scroll; 
+    min-height: 50%;
   }
-} */
+}
 
 /* Home Page Imnage For Medium Screens) */
 .quoteBox {
@@ -256,7 +257,7 @@ body, html {
 /* ==== Turned ON = SET FROM fixed to scroll to turn back on === Turn off parallax scrolling for tablets and phones */
 @media only screen and (max-device-width: 1600px) {
   .bgimg-1, .bgimg-2, .bgimg-3 {
-    background-attachment: fixed;
+    background-attachment: cover;
     min-height: 50%;
   }
 }
