--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,30 @@
   font-size: 15px;
 }
 
+button.accordion:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+*:after {
+  box-sizing: inherit;
+}
+
+button.accordion.active:after {
+  content: "\2212";
+}
+
+button.accordion:after {
+  content: '\002B';
+  color: white;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .collapsible:hover {
   background-color: #ccc;
