--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /* Style the button that is used to open and close the collapsible content */
 .collapsible {
-  background-color: #eee;
+  background-color: #f2f5ff;
   color: #444;
   cursor: pointer;
   padding: 18px;
@@ -31,7 +31,7 @@ button.accordion.active:after {
 
 button.accordion:after {
   content: '\002B';
-  color: white;
+  color: #444;
   font-weight: bold;
   float: right;
   margin-left: 5px;
@@ -134,6 +134,10 @@ button.accordion:after {
 
 .active, .dot:hover {
   background-color: #717171;
+}
+
+.active, .dot:hover {
+  background-color: #c9c9c9;
 }
 
 /* Fading animation */
