--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,23 @@
+/* ++++++ Start OF Education Table Styles ++++++ */
+.centerEdu {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table, th, td {
+  border: 1px solid rgb(167, 167, 167);
+  border-collapse: collapse;
+}
+
+table.center {
+  margin-left: auto; 
+  margin-right: auto;
+}
+/* ++++++ END OF Education Table Styles ++++++ */
+
+
+
+
 /* ++++++ Start OF  Collapsable Certificates ++++++ */
 
 /* Style the button that is used to open and close the collapsible content */
