--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,15 @@
   margin-right: auto;
 }
 
+.leftEdu {
+  text-align: left;
+  /* padding-left: 2%; */
+}
+
+.paddingEdu {
+  padding: 2%;
+}
+
 table, th, td {
   border: 1px solid rgb(167, 167, 167);
   border-collapse: collapse;
