bottom nav img not yet impl

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+/* ++++++ Start bot Nav Img Pagging ++++++ */
+/* .digiSun {
+  padding-bottom: 2%;
+} */
+
 /* ++++++ Start OF Education Table Styles ++++++ */
 .centerEdu {
   margin-left: auto;
