--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
-/* ++++++ Start bot Nav Img Pagging ++++++ */
+/* ++++++ Start bottom Nav Img Padding ++++++ */
 /* .digiSun {
   padding-bottom: 2%;
 } */
+/* ++++++ End bot Nav Img Padding ++++++ */
+
+
 
 /* ++++++ Start OF Education Table Styles ++++++ */
 .centerEdu {
