--- a/styles.css
+++ b/styles.css
@@ -351,6 +351,20 @@ body, html {
 }
 
 /* Create a Parallax Effect */
+.bgimg-3 {
+  background-attachment: fixed;
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+/* Home Page Imnage For Medium Screens) */
+.bgimg-3 {
+  background-image: url("images/heliosSynthTable.jpg");
+  min-height: 50%;
+}
+
+/* Create a Parallax Effect */
 .bgimg-4 {
   background-attachment: fixed;
   background-position: center;
@@ -375,6 +389,12 @@ body, html {
 
   .bgimg-2 {
     background-image: url("images/xrTerra1.png");
+    background-attachment: scroll; 
+    min-height: 50%;
+  }
+
+  .bgimg-3 {
+    background-image: url("images/heliosSynthTable.jpg");
     background-attachment: scroll; 
     min-height: 50%;
   }
